mm-13 fix logout alignment

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -73,11 +73,11 @@ body, #root, .app {
     width:140px;
     color: #FFFFFF;
     background: #616B6B;
-    line-height: 30px;
-    text-align: center;
+    line-height: 10px;
+    text-align: left;
     top: 90px;
     left: -30px;
-    padding: 20px 5px 5px;
+    padding: 20px 5px 20px 15px;
     span {
       cursor: pointer;
     }
